Update problems in example JSON

--- a/example/config.json
+++ b/example/config.json
@@ -1,37 +1,29 @@
 {
-  "servers": [
-    {
-      "fc00": [
-        {
-          "channels": [
+   "servers":{
+      "fc00":{
+         "channels":[
             "#lukevers",
             "#mouse",
             "#mice"
-          ],
-          "debug": true,
-          "host": "irc.fc00.io",
-          "name": "mouse",
-          "nick": "mouse",
-          "plugins": [
-            {
-              "javascript": [
-                {
-                  "enabled": true,
-                  "events": [
-                    "PRIVMSG"
-                  ],
-                  "folder": "scripts/javascript",
-                  "pattern": "*.js"
-                }
-              ]
+         ],
+         "debug":true,
+         "host":"irc.fc00.io",
+         "name":"mouse",
+         "nick":"mouse",
+         "plugins":{
+            "javascript":{
+               "enabled":true,
+               "events":[
+                  "PRIVMSG"
+               ],
+               "folder":"scripts/javascript",
+               "pattern":"*.js"
             }
-          ],
-          "port": 6667,
-          "reconnect": true,
-          "tls": false,
-          "user": "mouse"
-        }
-      ]
-    }
-  ]
+         },
+         "port":6667,
+         "reconnect":true,
+         "tls":false,
+         "user":"mouse"
+      }
+   }
 }
