Move example configuration files to contrib/config-examples

--- a/contrib/config-examples/config.json
+++ b/contrib/config-examples/config.json
@@ -16,7 +16,7 @@
                "events":[
                   "PRIVMSG"
                ],
-               "folder":"scripts/javascript",
+               "folder":"contrib/scripts/javascript",
                "pattern":"*.js"
             }
          },
