--- a/contrib/config-examples/config.toml
+++ b/contrib/config-examples/config.toml
@@ -16,6 +16,6 @@
 
         [servers.fc00.plugins.javascript]
             enabled = true
-            folder = "scripts/javascript/"
+            folder = "contrib/scripts/javascript/"
             pattern = "*.js"
             events = [ "PRIVMSG" ]
