--- a/contrib/config-examples/config.yaml
+++ b/contrib/config-examples/config.yaml
@@ -18,7 +18,7 @@ servers:
     plugins:
       javascript:
         enabled: true
-        folder: scripts/javascript/
+        folder: contrib/scripts/javascript/
         pattern: "*.js"
         events:
           - PRIVMSG
