Plugins should be able to have multiple folders

--- a/contrib/config-examples/config.json
+++ b/contrib/config-examples/config.json
@@ -16,7 +16,9 @@
                "events":[
                   "PRIVMSG"
                ],
-               "folder":"contrib/scripts/javascript",
+               "folders": [
+                   "contrib/scripts/javascript"
+               ],
                "pattern":"*.js"
             }
          },
