--- a/contrib/config-examples/config.properties
+++ b/contrib/config-examples/config.properties
@@ -10,6 +10,6 @@ servers.fc00.nick = "mouse"
 servers.fc00.user = "mouse"
 
 servers.fc00.plugins.javascript.enabled = true
-servers.fc00.plugins.javascript.folder = "contrib/scripts/javascript/"
+servers.fc00.plugins.javascript.folders[] = "contrib/scripts/javascript/"
 servers.fc00.plugins.javascript.pattern = "*.js"
 servers.fc00.plugins.javascript.events[] = "PRIVMSG"
