--- a/contrib/config-examples/config.yaml
+++ b/contrib/config-examples/config.yaml
@@ -1,14 +1,15 @@
 servers:
   fc00:
-    nick: mouse
-    user: mouse
-    name: mouse
+    nick: "mouse"
+    user: "mouse"
+    name: "mouse"
 
-    host: irc.fc00.io
+    host: "irc.fc00.io"
     port: 6667
     tls: false
     reconnect: true
     debug: true
+    storage: "sqlite3"
 
     channels:
       - "#lukevers"
@@ -22,4 +23,15 @@ servers:
             - "contrib/scripts/javascript/"
         pattern: "*.js"
         events:
-          - PRIVMSG
+          - "PRIVMSG"
+
+    store:
+      sqlite3:
+        dsn: "/path/to/dbname.db"
+        table: "fc00"
+      mysql:
+        dsn: "user:password@/dbname?charset=utf8&parseTime=True"
+        table: "fc00"
+      postgres:
+        dsn: "host=myhost user=mouse dbname=mouse sslmode=disable password=mypassword"
+        table: "fc00"
