--- a/contrib/config-examples/config.json
+++ b/contrib/config-examples/config.json
@@ -25,7 +25,22 @@
          "port":6667,
          "reconnect":true,
          "tls":false,
-         "user":"mouse"
+         "user":"mouse",
+         "storage": "sqlite3",
+         "store": {
+            "sqlite3": {
+                "dsn": "/path/to/dbname.db",
+                "table": "fc00"
+            },
+            "mysql": {
+                "dsn": "user:password@/dbname?charset=utf8&parseTime=True",
+                "table": "fc00"
+            },
+            "postgres": {
+                "dsn": "host=myhost user=mouse dbname=mouse sslmode=disable password=mypassword",
+                "table": "fc00"
+            }
+         }
       }
    }
 }
