--- a/contrib/config-examples/config.toml
+++ b/contrib/config-examples/config.toml
@@ -11,6 +11,7 @@
         tls = false
         reconnect = true
         debug = true
+        storage = "sqlite3"
 
         channels = [ "#lukevers", "#mouse", "#mice" ]
 
@@ -19,3 +20,15 @@
             folders = [ "contrib/scripts/javascript/" ]
             pattern = "*.js"
             events = [ "PRIVMSG" ]
+
+        [servers.fc00.store.sqlite3]
+            dsn = "/path/to/dbname.db"
+            table = "fc00"
+
+        [servers.fc00.store.mysql]
+            dsn = "user:password@/dbname?charset=utf8&parseTime=True"
+            table = "fc00"
+
+        [servers.fc00.store.postgres]
+            dsn = "host=myhost user=mouse dbname=mouse sslmode=disable password=mypassword"
+            table = "fc00"
