Add MsSQL to configs, and remove "table"
Table is going to be automatically generated like this:

```
[server]_[channel]_[plugin]
```

--- a/contrib/config-examples/config.yaml
+++ b/contrib/config-examples/config.yaml
@@ -28,10 +28,9 @@ servers:
     store:
       sqlite3:
         dsn: "/path/to/dbname.db"
-        table: "fc00"
       mysql:
         dsn: "user:password@/dbname?charset=utf8&parseTime=True"
-        table: "fc00"
       postgres:
         dsn: "host=myhost user=mouse dbname=mouse sslmode=disable password=mypassword"
-        table: "fc00"
+      mssql:
+        dsn: "server=localhost;user id=sa"
