--- a/contrib/config-examples/config.json
+++ b/contrib/config-examples/config.json
@@ -29,16 +29,16 @@
          "storage": "sqlite3",
          "store": {
             "sqlite3": {
-                "dsn": "/path/to/dbname.db",
-                "table": "fc00"
+                "dsn": "/path/to/dbname.db"
             },
             "mysql": {
-                "dsn": "user:password@/dbname?charset=utf8&parseTime=True",
-                "table": "fc00"
+                "dsn": "user:password@/dbname?charset=utf8&parseTime=True"
             },
             "postgres": {
-                "dsn": "host=myhost user=mouse dbname=mouse sslmode=disable password=mypassword",
-                "table": "fc00"
+                "dsn": "host=myhost user=mouse dbname=mouse sslmode=disable password=mypassword"
+            },
+            "mssql": {
+                "dsn": "server=localhost;user id=sa"
             }
          }
       }
