--- a/contrib/config-examples/config.properties
+++ b/contrib/config-examples/config.properties
@@ -15,12 +15,7 @@ servers.fc00.plugins.javascript.pattern = "*.js"
 servers.fc00.plugins.javascript.events[] = "PRIVMSG"
 
 servers.fc00.storage = "sqlite3"
-
 servers.fc00.store.sqlite3.dsn = "/path/to/dbname.db"
-servers.fc00.store.sqlite3.table= "fc00"
-
 servers.fc00.store.mysql.dsn = "user:password@/dbname?charset=utf8&parseTime=True"
-servers.fc00.store.mysql.table= "fc00"
-
 servers.fc00.store.postgres.dsn = "host=myhost user=mouse dbname=mouse sslmode=disable password=mypassword"
-servers.fc00.store.postgres.table= "fc00"
+servers.fc00.store.mssql.dsn = "server=localhost;user id=sa"
