--- a/contrib/config-examples/config.toml
+++ b/contrib/config-examples/config.toml
@@ -23,12 +23,12 @@
 
         [servers.fc00.store.sqlite3]
             dsn = "/path/to/dbname.db"
-            table = "fc00"
 
         [servers.fc00.store.mysql]
             dsn = "user:password@/dbname?charset=utf8&parseTime=True"
-            table = "fc00"
 
         [servers.fc00.store.postgres]
             dsn = "host=myhost user=mouse dbname=mouse sslmode=disable password=mypassword"
-            table = "fc00"
+
+        [servers.fc00.store.mssql]
+            dsn = "server=localhost;user id=sa"
