--- a/contrib/config-examples/config.properties
+++ b/contrib/config-examples/config.properties
@@ -1,5 +1,6 @@
 servers.fc00.debug = true
 servers.fc00.reconnect = true
+servers.fc00.ping = 30
 
 servers.fc00.host = "irc.fc00.io"
 servers.fc00.port = 6667
