--- a/contrib/config-examples/config.yaml
+++ b/contrib/config-examples/config.yaml
@@ -7,9 +7,11 @@ servers:
     host: "irc.fc00.io"
     port: 6667
     tls: false
-    reconnect: true
     debug: true
     storage: "sqlite3"
+
+    reconnect: true
+    ping: 30
 
     channels:
       - "#lukevers"
