--- a/contrib/config-examples/config.toml
+++ b/contrib/config-examples/config.toml
@@ -9,9 +9,11 @@
         host = "irc.fc00.io"
         port = 6667
         tls = false
-        reconnect = true
         debug = true
         storage = "sqlite3"
+
+        reconnect = true
+        ping = 30
 
         channels = [ "#lukevers", "#mouse", "#mice" ]
 
